--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 <body>
   <div class="container">
-    <header class="header">
+    <header class="header on">
       <a href="#" class="logo">
         <svg xmlns="http://www.w3.org/2000/svg" width="37" height="37" viewBox="0 0 37 40" fill="none">
           <path
@@ -25,41 +25,47 @@
             fill="#7B4AE2" />
         </svg>
       </a>
+      <div class="menu-toggle">
+        <div class="one"></div>
+        <div class="two"></div>
+        <div class="three"></div>
+      </div>
       <nav>
         <ul>
-          <li><a href="#">Home</a></li>
-          <li><a href="#about">Sobre mim</a></li>
-          <li><a href="#jobs">Portfolio</a></li>
-          <li><a href="#skills">Skills</a></li>
-          <li><a href="#carrer">Carreira</a></li>
-          <li><a href="#contacts">Contato</a></li>
+          <li><a href="#content" class="link__item">Home</a></li>
+          <li><a href="#about" class="link__item">Sobre mim</a></li>
+          <li><a href="#jobs" class="link__item">Portfolio</a></li>
+          <li><a href="#skills" class="link__item">Skills</a></li>
+          <li><a href="#career" class="link__item">Carreira</a></li>
+          <li><a href="#contacts" class="link__item">Contato</a></li>
         </ul>
       </nav>
     </header>
 
-    <main class="content">
+    <section class="content" id="content">
       <div class="salutation">
         <div class="tag">👋 Saudações!</div>
-        <div class="name">
-          Ramires
-          Matias
-        </div>
+        <div class="name">Ramires Matias</div>
         <div class="job-title">Desenvolvedor Front-end</div>
         <div class="social-media">
-          <svg xmlns="http://www.w3.org/2000/svg" width="38" height="38" viewBox="0 0 38 38" fill="none">
-            <g clip-path="url(#clip0_21_3379)">
-            <path d="M18.9999 0C29.4939 0 38 8.50725 38 19.0001C38 29.4929 29.4939 38 18.9999 38C8.50594 38 0 29.4928 0 19.0001C0 8.50738 8.50607 0 18.9999 0Z" fill="white" fill-opacity="0.5"/>
-            <path d="M10.7065 26.1059H14.2643V14.2475H10.7065V26.1059ZM24.567 13.8368C22.8404 13.8368 21.2954 14.4673 20.1995 15.8591V14.2085H16.6286V26.1061H20.1995V19.6722C20.1995 18.3125 21.4452 16.986 23.0055 16.986C24.5659 16.986 24.9507 18.3125 24.9507 19.6389V26.1049H28.5084V19.3741C28.5083 14.6989 26.2949 13.8368 24.567 13.8368ZM12.4687 13.0625C13.452 13.0625 14.25 12.2644 14.25 11.2812C14.25 10.2979 13.452 9.5 12.4687 9.5C11.4855 9.5 10.6874 10.298 10.6874 11.2813C10.6874 12.2646 11.4855 13.0625 12.4687 13.0625Z" fill="#090E16"/>
-            </g>
-            <defs>
-            <clipPath id="clip0_21_3379">
-            <rect width="38" height="38" fill="white"/>
-            </clipPath>
-            </defs>
-          </svg>
-          <svg xmlns="http://www.w3.org/2000/svg" width="40" height="39" viewBox="0 0 40 39" fill="none">
-            <path fill-rule="evenodd" clip-rule="evenodd" d="M20.0674 0.40332C9.13764 0.40332 0.285034 9.25593 0.285034 20.1857C0.285034 28.9394 5.94773 36.333 13.8112 38.9542C14.8003 39.1273 15.1713 38.5338 15.1713 38.0145C15.1713 37.5447 15.1465 35.9868 15.1465 34.3301C10.1762 35.245 8.89036 33.1184 8.49471 32.0056C8.27216 31.4369 7.30777 29.6812 6.46702 29.2114C5.77464 28.8405 4.78552 27.9255 6.44229 27.9008C8.00015 27.8761 9.11291 29.335 9.48383 29.9285C11.2642 32.9206 14.108 32.0798 15.2454 31.5605C15.4185 30.2747 15.9378 29.4092 16.5066 28.9146C12.105 28.4201 7.5056 26.7139 7.5056 19.1471C7.5056 16.9958 8.27216 15.2154 9.53329 13.8306C9.33546 13.336 8.64308 11.3083 9.73111 8.58827C9.73111 8.58827 11.3879 8.06898 15.1713 10.616C16.7538 10.1709 18.4353 9.94831 20.1168 9.94831C21.7983 9.94831 23.4799 10.1709 25.0624 10.616C28.8458 8.04426 30.5026 8.58827 30.5026 8.58827C31.5906 11.3083 30.8982 13.336 30.7004 13.8306C31.9615 15.2154 32.7281 16.971 32.7281 19.1471C32.7281 26.7386 28.104 28.4201 23.7024 28.9146C24.4195 29.5328 25.0377 30.7198 25.0377 32.5744C25.0377 35.2203 25.013 37.3469 25.013 38.0145C25.013 38.5338 25.3839 39.152 26.373 38.9542C34.1871 36.333 39.8498 28.9146 39.8498 20.1857C39.8498 9.25593 30.9971 0.40332 20.0674 0.40332Z" fill="white" fill-opacity="0.5"/>
-          </svg>
+          <a href="https://www.linkedin.com/in/ramires-matias-311aa9191/" target="_blank">
+            <svg xmlns="http://www.w3.org/2000/svg" width="38" height="38" viewBox="0 0 38 38" fill="none">
+              <g clip-path="url(#clip0_21_3379)">
+              <path d="M18.9999 0C29.4939 0 38 8.50725 38 19.0001C38 29.4929 29.4939 38 18.9999 38C8.50594 38 0 29.4928 0 19.0001C0 8.50738 8.50607 0 18.9999 0Z" fill="white" fill-opacity="0.5"/>
+              <path d="M10.7065 26.1059H14.2643V14.2475H10.7065V26.1059ZM24.567 13.8368C22.8404 13.8368 21.2954 14.4673 20.1995 15.8591V14.2085H16.6286V26.1061H20.1995V19.6722C20.1995 18.3125 21.4452 16.986 23.0055 16.986C24.5659 16.986 24.9507 18.3125 24.9507 19.6389V26.1049H28.5084V19.3741C28.5083 14.6989 26.2949 13.8368 24.567 13.8368ZM12.4687 13.0625C13.452 13.0625 14.25 12.2644 14.25 11.2812C14.25 10.2979 13.452 9.5 12.4687 9.5C11.4855 9.5 10.6874 10.298 10.6874 11.2813C10.6874 12.2646 11.4855 13.0625 12.4687 13.0625Z" fill="#090E16"/>
+              </g>
+              <defs>
+              <clipPath id="clip0_21_3379">
+              <rect width="38" height="38" fill="white"/>
+              </clipPath>
+              </defs>
+            </svg>
+          </a>
+          <a href="https://github.com/RamiresMatias" target="_blank">
+            <svg xmlns="http://www.w3.org/2000/svg" width="40" height="39" viewBox="0 0 40 39" fill="none">
+              <path fill-rule="evenodd" clip-rule="evenodd" d="M20.0674 0.40332C9.13764 0.40332 0.285034 9.25593 0.285034 20.1857C0.285034 28.9394 5.94773 36.333 13.8112 38.9542C14.8003 39.1273 15.1713 38.5338 15.1713 38.0145C15.1713 37.5447 15.1465 35.9868 15.1465 34.3301C10.1762 35.245 8.89036 33.1184 8.49471 32.0056C8.27216 31.4369 7.30777 29.6812 6.46702 29.2114C5.77464 28.8405 4.78552 27.9255 6.44229 27.9008C8.00015 27.8761 9.11291 29.335 9.48383 29.9285C11.2642 32.9206 14.108 32.0798 15.2454 31.5605C15.4185 30.2747 15.9378 29.4092 16.5066 28.9146C12.105 28.4201 7.5056 26.7139 7.5056 19.1471C7.5056 16.9958 8.27216 15.2154 9.53329 13.8306C9.33546 13.336 8.64308 11.3083 9.73111 8.58827C9.73111 8.58827 11.3879 8.06898 15.1713 10.616C16.7538 10.1709 18.4353 9.94831 20.1168 9.94831C21.7983 9.94831 23.4799 10.1709 25.0624 10.616C28.8458 8.04426 30.5026 8.58827 30.5026 8.58827C31.5906 11.3083 30.8982 13.336 30.7004 13.8306C31.9615 15.2154 32.7281 16.971 32.7281 19.1471C32.7281 26.7386 28.104 28.4201 23.7024 28.9146C24.4195 29.5328 25.0377 30.7198 25.0377 32.5744C25.0377 35.2203 25.013 37.3469 25.013 38.0145C25.013 38.5338 25.3839 39.152 26.373 38.9542C34.1871 36.333 39.8498 28.9146 39.8498 20.1857C39.8498 9.25593 30.9971 0.40332 20.0674 0.40332Z" fill="white" fill-opacity="0.5"/>
+            </svg>
+          </a>
         </div>
       </div>
       <div class="avatar">
@@ -233,14 +239,14 @@
           Vamos conversar
         </button>
       </div>
-    </main>
+    </section>
     <div class="divider"></div>
-    <div class="about" id="about">
+    <section class="about" id="about">
       <img src="./images/profile.jpeg" alt="Imagem de perfil" />
       <div class="description">
         <div class="tag">🧐 Sobre mim</div>
         <div class="title">
-          Ramires Matias <br />
+          Ramires Matias
           Naves Silva
         </div>
         <div class="presentation">
@@ -262,8 +268,8 @@
           </p>
         </div>
       </div>
-    </div>
-    <div class="jobs" id="jobs">
+    </section>
+    <section class="jobs" id="jobs">
       <div class="tag">🔗 Portfólio</div>
       <div class="title" style="margin-bottom: 100px">
         Trabalhos e projetos
@@ -283,8 +289,8 @@
           <div class="projects__item--image"></div>
         </div>
       </div>
-    </div>
-    <div class="skills" id="skills">
+    </section>
+    <section class="skills" id="skills">
       <div class="tag" style="margin-bottom: 24px">
         🧑‍💻 Skills · Experiências
       </div>
@@ -457,8 +463,8 @@
           </svg>
         </div>
       </div>
-    </div>
-    <div class="career" id="career">
+    </section>
+    <section class="career" id="career">
       <div class="tag" style="margin-bottom: 24px">💼 Carreira</div>
       <div class="title" style="margin-bottom: 60px">Trajetória até aqui</div>
       <div class="experience">
@@ -501,8 +507,8 @@
           </div>
         </div>
       </div>
-    </div>
-    <div class="contacts" id="contacts">
+    </section>
+    <section class="contacts" id="contacts">
       <div class="tag" style="margin-bottom: 24px">📬 Contatos</div>
       <div class="title" style="margin-bottom: 60px">Vamos conversar!</div>
       <div class="contact">
@@ -537,27 +543,32 @@
           <path d="M7 13.999L16 4.99902L25 13.999" stroke="#7B4AE2" stroke-opacity="0.5" stroke-linecap="round" stroke-linejoin="round"/>
         </svg>
       </a>
-    </div>
+    </section>
     <footer class="footer">
       <div class="copyright">Copyright © Ramires Matias · 2023</div>
       <div class="social-media">
-        <svg xmlns="http://www.w3.org/2000/svg" width="38" height="38" viewBox="0 0 38 38" fill="none">
-          <g clip-path="url(#clip0_21_3379)">
-          <path d="M18.9999 0C29.4939 0 38 8.50725 38 19.0001C38 29.4929 29.4939 38 18.9999 38C8.50594 38 0 29.4928 0 19.0001C0 8.50738 8.50607 0 18.9999 0Z" fill="white" fill-opacity="0.5"/>
-          <path d="M10.7065 26.1059H14.2643V14.2475H10.7065V26.1059ZM24.567 13.8368C22.8404 13.8368 21.2954 14.4673 20.1995 15.8591V14.2085H16.6286V26.1061H20.1995V19.6722C20.1995 18.3125 21.4452 16.986 23.0055 16.986C24.5659 16.986 24.9507 18.3125 24.9507 19.6389V26.1049H28.5084V19.3741C28.5083 14.6989 26.2949 13.8368 24.567 13.8368ZM12.4687 13.0625C13.452 13.0625 14.25 12.2644 14.25 11.2812C14.25 10.2979 13.452 9.5 12.4687 9.5C11.4855 9.5 10.6874 10.298 10.6874 11.2813C10.6874 12.2646 11.4855 13.0625 12.4687 13.0625Z" fill="#090E16"/>
-          </g>
-          <defs>
-          <clipPath id="clip0_21_3379">
-          <rect width="38" height="38" fill="white"/>
-          </clipPath>
-          </defs>
-        </svg>
-        <svg xmlns="http://www.w3.org/2000/svg" width="40" height="39" viewBox="0 0 40 39" fill="none">
-          <path fill-rule="evenodd" clip-rule="evenodd" d="M20.0674 0.40332C9.13764 0.40332 0.285034 9.25593 0.285034 20.1857C0.285034 28.9394 5.94773 36.333 13.8112 38.9542C14.8003 39.1273 15.1713 38.5338 15.1713 38.0145C15.1713 37.5447 15.1465 35.9868 15.1465 34.3301C10.1762 35.245 8.89036 33.1184 8.49471 32.0056C8.27216 31.4369 7.30777 29.6812 6.46702 29.2114C5.77464 28.8405 4.78552 27.9255 6.44229 27.9008C8.00015 27.8761 9.11291 29.335 9.48383 29.9285C11.2642 32.9206 14.108 32.0798 15.2454 31.5605C15.4185 30.2747 15.9378 29.4092 16.5066 28.9146C12.105 28.4201 7.5056 26.7139 7.5056 19.1471C7.5056 16.9958 8.27216 15.2154 9.53329 13.8306C9.33546 13.336 8.64308 11.3083 9.73111 8.58827C9.73111 8.58827 11.3879 8.06898 15.1713 10.616C16.7538 10.1709 18.4353 9.94831 20.1168 9.94831C21.7983 9.94831 23.4799 10.1709 25.0624 10.616C28.8458 8.04426 30.5026 8.58827 30.5026 8.58827C31.5906 11.3083 30.8982 13.336 30.7004 13.8306C31.9615 15.2154 32.7281 16.971 32.7281 19.1471C32.7281 26.7386 28.104 28.4201 23.7024 28.9146C24.4195 29.5328 25.0377 30.7198 25.0377 32.5744C25.0377 35.2203 25.013 37.3469 25.013 38.0145C25.013 38.5338 25.3839 39.152 26.373 38.9542C34.1871 36.333 39.8498 28.9146 39.8498 20.1857C39.8498 9.25593 30.9971 0.40332 20.0674 0.40332Z" fill="white" fill-opacity="0.5"/>
-        </svg>
+        <a href="https://www.linkedin.com/in/ramires-matias-311aa9191/" target="_blank">
+          <svg xmlns="http://www.w3.org/2000/svg" width="38" height="38" viewBox="0 0 38 38" fill="none">
+            <g clip-path="url(#clip0_21_3379)">
+            <path d="M18.9999 0C29.4939 0 38 8.50725 38 19.0001C38 29.4929 29.4939 38 18.9999 38C8.50594 38 0 29.4928 0 19.0001C0 8.50738 8.50607 0 18.9999 0Z" fill="white" fill-opacity="0.5"/>
+            <path d="M10.7065 26.1059H14.2643V14.2475H10.7065V26.1059ZM24.567 13.8368C22.8404 13.8368 21.2954 14.4673 20.1995 15.8591V14.2085H16.6286V26.1061H20.1995V19.6722C20.1995 18.3125 21.4452 16.986 23.0055 16.986C24.5659 16.986 24.9507 18.3125 24.9507 19.6389V26.1049H28.5084V19.3741C28.5083 14.6989 26.2949 13.8368 24.567 13.8368ZM12.4687 13.0625C13.452 13.0625 14.25 12.2644 14.25 11.2812C14.25 10.2979 13.452 9.5 12.4687 9.5C11.4855 9.5 10.6874 10.298 10.6874 11.2813C10.6874 12.2646 11.4855 13.0625 12.4687 13.0625Z" fill="#090E16"/>
+            </g>
+            <defs>
+            <clipPath id="clip0_21_3379">
+            <rect width="38" height="38" fill="white"/>
+            </clipPath>
+            </defs>
+          </svg>
+        </a>
+        <a href="https://github.com/RamiresMatias" target="_blank">
+          <svg xmlns="http://www.w3.org/2000/svg" width="40" height="39" viewBox="0 0 40 39" fill="none">
+            <path fill-rule="evenodd" clip-rule="evenodd" d="M20.0674 0.40332C9.13764 0.40332 0.285034 9.25593 0.285034 20.1857C0.285034 28.9394 5.94773 36.333 13.8112 38.9542C14.8003 39.1273 15.1713 38.5338 15.1713 38.0145C15.1713 37.5447 15.1465 35.9868 15.1465 34.3301C10.1762 35.245 8.89036 33.1184 8.49471 32.0056C8.27216 31.4369 7.30777 29.6812 6.46702 29.2114C5.77464 28.8405 4.78552 27.9255 6.44229 27.9008C8.00015 27.8761 9.11291 29.335 9.48383 29.9285C11.2642 32.9206 14.108 32.0798 15.2454 31.5605C15.4185 30.2747 15.9378 29.4092 16.5066 28.9146C12.105 28.4201 7.5056 26.7139 7.5056 19.1471C7.5056 16.9958 8.27216 15.2154 9.53329 13.8306C9.33546 13.336 8.64308 11.3083 9.73111 8.58827C9.73111 8.58827 11.3879 8.06898 15.1713 10.616C16.7538 10.1709 18.4353 9.94831 20.1168 9.94831C21.7983 9.94831 23.4799 10.1709 25.0624 10.616C28.8458 8.04426 30.5026 8.58827 30.5026 8.58827C31.5906 11.3083 30.8982 13.336 30.7004 13.8306C31.9615 15.2154 32.7281 16.971 32.7281 19.1471C32.7281 26.7386 28.104 28.4201 23.7024 28.9146C24.4195 29.5328 25.0377 30.7198 25.0377 32.5744C25.0377 35.2203 25.013 37.3469 25.013 38.0145C25.013 38.5338 25.3839 39.152 26.373 38.9542C34.1871 36.333 39.8498 28.9146 39.8498 20.1857C39.8498 9.25593 30.9971 0.40332 20.0674 0.40332Z" fill="white" fill-opacity="0.5"/>
+          </svg>
+        </a>
       </div>
     </footer>
   </div>
+  <script src="./script.js"></script>
 </body>
 
 </html>
