Add conteúdo de área acadêmica

--- a/index.html
+++ b/index.html
@@ -227,7 +227,7 @@
             <path d="M2.5 13.5H13.5" stroke="#7B4AE2" stroke-opacity="0.5" stroke-linecap="round"
               stroke-linejoin="round" />
           </svg></a>
-        <button class="button-talk-to-me ">
+        <!-- <button class="button-talk-to-me ">
           <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none">
             <path
               d="M4.25626 16.5937C3.13959 14.7098 2.74899 12.483 3.1578 10.3314C3.5666 8.17982 4.74669 6.25145 6.47652 4.9083C8.20636 3.56516 10.367 2.8996 12.5527 3.03658C14.7385 3.17357 16.7991 4.10367 18.3477 5.65227C19.8963 7.20088 20.8264 9.26149 20.9634 11.4473C21.1004 13.633 20.4348 15.7937 19.0917 17.5235C17.7486 19.2533 15.8202 20.4334 13.6686 20.8422C11.5171 21.251 9.29025 20.8604 7.40626 19.7437V19.7437L4.29376 20.625C4.16624 20.6623 4.03103 20.6646 3.90231 20.6317C3.77359 20.5987 3.6561 20.5318 3.56215 20.4379C3.4682 20.3439 3.40126 20.2264 3.36833 20.0977C3.33541 19.969 3.33771 19.8338 3.37501 19.7062L4.25626 16.5937Z"
@@ -237,7 +237,7 @@
               stroke="#7B4AE2" stroke-opacity="0.5" stroke-linecap="round" stroke-linejoin="round" />
           </svg>
           Vamos conversar
-        </button>
+        </button> -->
       </div>
     </section>
     <div class="divider"></div>
@@ -458,37 +458,103 @@
           <div class="title-experience">Área profissional</div>
           <div class="subtitle" style="margin-bottom: 60px">2019 · Atualmente</div>
           <div class="card-experience card-experience--active">
-            <div class="card-experience--title">Desenvolvedor Front-end na Conexa</div>
+            <div class="card-experience--title">Desenvolvedor Front-end - Conexa</div>
             <div class="card-experience--description" style="margin-bottom: 50px;">Desenvolvimento de features na aplicação principal e site com React Js e Typescript, 
               além do auxíllio de outras tecnologias como Next, Styled Components e padrões de arquitetura.
             </div>
             <div class="card-experience--footer">
               <div class="years">1 ano e 2 meses</div>
               <div class="time">Agosto/2022 · Atualmente</div>
+            </div>
+          </div>
+          <div class="card-experience">
+            <div class="card-experience--title">Desenvolvedor Fullstack júnior Node/VueJs - iRancho</div>
+            <div class="card-experience--description" style="margin-bottom: 50px;">Desenvolvimento de features na aplicação principal e site com React Js e Typescript, 
+              além do auxíllio de outras tecnologias como Next, Styled Components e padrões de arquitetura.
+            </div>
+            <div class="card-experience--footer">
+              <div class="years">1 ano e 8 meses</div>
+              <div class="time">Fevereiro/2021 · Agosto/2022</div>
+            </div>
+          </div>
+          <div class="card-experience">
+            <div class="card-experience--title">Estagiário de Suporte - Grupo Siagri</div>
+            <div class="card-experience--description" style="margin-bottom: 50px;">Suporte a usuários nos aplicativos Siagri. 
+              Siagri Sales, Siagri API, Siagri Autorize e Siagri Algodoeira 
+            </div>
+            <div class="card-experience--footer">
+              <div class="years">8 meses</div>
+              <div class="time">Julho/2020 · Fevereiro/2021</div>
+            </div>
+          </div>
+          <div class="card-experience">
+            <div class="card-experience--title">Estagiário de TI - Casa do Pica Pau</div>
+            <div class="card-experience--description" style="margin-bottom: 50px;">
+              Suporte ao Usuário. Criação de senhas e credencias de novos colaboradores.
+              Instalação e configuração de impressoras e máquinas
+            </div>
+            <div class="card-experience--footer">
+              <div class="years">10 meses</div>
+              <div class="time">Outubro/2019 · Julho/2020</div>
+            </div>
+          </div>
+          <div class="card-experience">
+            <div class="card-experience--title">Estagiário de E-commerce - Casa do Pica Pau</div>
+            <div class="card-experience--description" style="margin-bottom: 50px;">Cadastro de produtos e promoções na loja virtual;
+              Faturamento de Notas Fiscais;
+              Acompanhamento de entregas;
+              Relatórios e auxílio no gerenciamento de marketplace;
+              Realização de pré nota.
+            </div>
+            <div class="card-experience--footer">
+              <div class="years">10 meses</div>
+              <div class="time">Janeiro/2019 · Outubro/2019</div>
             </div>
           </div>
         </div>
         <div class="academic">
-          <div class="title-experience">Acadêmica</div>
+          <div class="title-experience">Acadêmica e Certificações</div>
           <div class="subtitle" style="margin-bottom: 60px">2018 · Atualmente</div>
-          <div class="card-experience">
-            <div class="card-experience--title">Desenvolvedor Front-end na Conexa</div>
-            <div class="card-experience--description" style="margin-bottom: 50px;">Desenvolvimento de features na aplicação principal e site com React Js e Typescript, 
-              além do auxíllio de outras tecnologias como Next, Styled Components e padrões de arquitetura.
+          <div class="card-experience card-experience--active">
+            <div class="card-experience--title">Análise e Desenvolvimento de Sistemas - Faculdade Descomplica</div>
+            <div class="card-experience--description" style="margin-bottom: 50px;">Bacharelado em Ánalise e Desenvolvimento de Sistemas
             </div>
             <div class="card-experience--footer">
-              <div class="years">1 ano e 2 meses</div>
-              <div class="time">Agosto/2022 · Atualmente</div>
+              <div class="years">9 meses</div>
+              <div class="time">Março/2023 · Atualmente</div>
             </div>
           </div>
           <div class="card-experience">
-            <div class="card-experience--title">Desenvolvedor Front-end na Conexa</div>
-            <div class="card-experience--description" style="margin-bottom: 50px;">Desenvolvimento de features na aplicação principal e site com React Js e Typescript, 
-              além do auxíllio de outras tecnologias como Next, Styled Components e padrões de arquitetura.
+            <div class="card-experience--title">Sistemas de Informação - UNIALFA</div>
+            <div class="card-experience--description" style="margin-bottom: 50px;">Curso de Bacharelado em Sistemas de Informação. (Não concluído)
             </div>
             <div class="card-experience--footer">
-              <div class="years">1 ano e 2 meses</div>
-              <div class="time">Agosto/2022 · Atualmente</div>
+              <div class="years">3 anos</div>
+              <div class="time">2019 · 2022</div>
+            </div>
+          </div>
+          <div class="card-experience">
+            <div class="card-experience--title">CSS Grid Layout - Origamid</div>
+            <div class="card-experience--description" style="margin-bottom: 50px;">Certificação em Curso de CSS Grid Layout</div>
+            <div class="card-experience--footer">
+              <div class="years">1 mês</div>
+              <div class="time">Janeiro/2023 · Fevereiro/2023</div>
+            </div>
+          </div>
+          <div class="card-experience">
+            <div class="card-experience--title">Ui Design - Origamid</div>
+            <div class="card-experience--description" style="margin-bottom: 50px;">Certificação em UI Design para iniciantes</div>
+            <div class="card-experience--footer">
+              <div class="years">3 meses</div>
+              <div class="time">Outubro/2022 · Janeiro/2023</div>
+            </div>
+          </div>
+          <div class="card-experience">
+            <div class="card-experience--title">Vue Js 2 - Udemy</div>
+            <div class="card-experience--description" style="margin-bottom: 50px;">Certificação no Curso de Vue js 2 na Udemy</div>
+            <div class="card-experience--footer">
+              <div class="years">6 meses</div>
+              <div class="time">Janeiro/2021 · Junho/2021</div>
             </div>
           </div>
         </div>
@@ -498,7 +564,7 @@
       <div class="tag" style="margin-bottom: 24px">📬 Contatos</div>
       <div class="title" style="margin-bottom: 60px">Vamos conversar!</div>
       <div class="contact">
-        <button class="button-talk-to-me">
+        <!-- <button class="button-talk-to-me">
           <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none">
             <path
               d="M4.25626 16.5937C3.13959 14.7098 2.74899 12.483 3.1578 10.3314C3.5666 8.17982 4.74669 6.25145 6.47652 4.9083C8.20636 3.56516 10.367 2.8996 12.5527 3.03658C14.7385 3.17357 16.7991 4.10367 18.3477 5.65227C19.8963 7.20088 20.8264 9.26149 20.9634 11.4473C21.1004 13.633 20.4348 15.7937 19.0917 17.5235C17.7486 19.2533 15.8202 20.4334 13.6686 20.8422C11.5171 21.251 9.29025 20.8604 7.40626 19.7437V19.7437L4.29376 20.625C4.16624 20.6623 4.03103 20.6646 3.90231 20.6317C3.77359 20.5987 3.6561 20.5318 3.56215 20.4379C3.4682 20.3439 3.40126 20.2264 3.36833 20.0977C3.33541 19.969 3.33771 19.8338 3.37501 19.7062L4.25626 16.5937Z"
@@ -508,15 +574,15 @@
               stroke="#7B4AE2" stroke-opacity="0.5" stroke-linecap="round" stroke-linejoin="round" />
           </svg>
           Vamos conversar
-        </button>
+        </button> -->
         <div class="contact-email">
           <svg xmlns="http://www.w3.org/2000/svg" width="40" height="40" viewBox="0 0 40 40" fill="none">
             <path d="M32.8594 5.60823L3.73437 13.8114C3.48644 13.8791 3.26544 14.0217 3.10146 14.2196C2.93748 14.4175 2.8385 14.6612 2.81801 14.9174C2.79751 15.1736 2.85649 15.4299 2.98692 15.6514C3.11734 15.8729 3.31287 16.0488 3.54687 16.1551L16.9219 22.4832C17.1839 22.6046 17.3943 22.815 17.5156 23.077L23.8437 36.452C23.9501 36.686 24.126 36.8815 24.3474 37.0119C24.5689 37.1424 24.8252 37.2013 25.0814 37.1808C25.3376 37.1603 25.5813 37.0614 25.7792 36.8974C25.9771 36.7334 26.1197 36.5124 26.1875 36.2645L34.3906 7.13948C34.4528 6.92694 34.4566 6.7016 34.4017 6.48707C34.3469 6.27253 34.2353 6.07671 34.0787 5.92013C33.9221 5.76355 33.7263 5.65198 33.5118 5.5971C33.2973 5.54222 33.0719 5.54607 32.8594 5.60823V5.60823Z" stroke="#7B4AE2" stroke-opacity="0.5" stroke-linecap="round" stroke-linejoin="round"/>
             <path d="M17.3281 22.6709L24.3906 15.6084" stroke="#7B4AE2" stroke-opacity="0.5" stroke-linecap="round" stroke-linejoin="round"/>
           </svg>
-          <label for="Email">Email:</label>
-          <div>ramiresmatias20000@gmail.com</div>
-          <button class="button-copy"><svg xmlns="http://www.w3.org/2000/svg" width="32" height="32" viewBox="0 0 32 32" fill="none">
+          <div>Email:</div>
+          <div id="text-email">ramiresmatias20000@gmail.com</div>
+          <button class="button-copy" id="button-copy"><svg xmlns="http://www.w3.org/2000/svg" width="32" height="32" viewBox="0 0 32 32" fill="none">
             <path d="M27 22.999V4.99902H9" stroke="#7B4AE2" stroke-opacity="0.5" stroke-linecap="round" stroke-linejoin="round"/>
             <path d="M23 8.99902H5V26.999H23V8.99902Z" stroke="#7B4AE2" stroke-opacity="0.5" stroke-linecap="round" stroke-linejoin="round"/>
           </svg></button>
