Add alteração fluxo projetos

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
       </div>
       <nav>
         <ul>
-          <li><a href="#" class="link__item">Home</a></li>
+          <li><a href="#" class="link__item active-link">Home</a></li>
           <li><a href="#about" class="link__item">Sobre mim</a></li>
           <li><a href="#jobs" class="link__item">Portfolio</a></li>
           <li><a href="#skills" class="link__item">Skills</a></li>
